Add trusted companies section to index.html
Added a new section for trusted companies.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
     <a href="careers.html" class="btn btn-outline">Join Us</a>
   </div>
 </section>
+  <section class="trusted">
+  <div class="container">
+    <h2>Trusted By Leading Companies</h2>
+    <div class="trusted-logos">
+      <div>Google</div>
+      <div>Infosys</div>
+      <div>TCS</div>
+      <div>Amazon</div>
+      <div>Wipro</div>
+    </div>
+  </div>
+</section>
+
 
 <section>
   <div class="container">
@@ -80,4 +93,5 @@
 
 </body>
 </html>
+
 
