Add jobseeker and jobs links to navigation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <li><a href="services.html">Services</a></li>
         <li><a href="clients.html">Clients</a></li>
         <li><a href="careers.html">Careers</a></li>
+        <li><a href="jobseeker-login.html">Login</a></li>
+        <li><a href="jobs.html">Login</a></li>
+
+
       </ul>
     </nav>
   </div>
@@ -93,5 +97,6 @@
 
 </body>
 </html>
+
 
 
