--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="clients.html">Clients</a></li>
         <li><a href="careers.html">Careers</a></li>
         <li><a href="jobseeker-login.html">Login</a></li>
-        <li><a href="jobs.html">Login</a></li>
+        <li><a href="jobs.html">Jobs</a></li>
 
 
       </ul>
@@ -97,6 +97,7 @@
 
 </body>
 </html>
+
 
 
 
