--- a/jobs.html
+++ b/jobs.html
@@ -35,8 +35,15 @@
 
     <div class="job-card">
       <div>
-        <h3>Frontend Developer</h3>
-        <p>Bengaluru | Full Time</p>
+       
+        <h3>Frontend Developer (React.js)</h3>
+<p>Job ID: VC-1023 | Bengaluru, Karnataka | Full-Time</p>
+<p>Experience: 1–3 Years | Salary: ₹5–8 LPA</p>
+        <span class="badge">Urgent Hiring</span>
+        <p class="posted">Posted 3 days ago</p>
+
+
+
       </div>
       <a href="#" class="btn btn-primary">Apply</a>
     </div>
@@ -66,3 +73,4 @@
 
 </body>
 </html>
+
