--- a/jobseeker-login.html
+++ b/jobseeker-login.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div class="login-logo">Vertex Corporate</div>
+
 <title>Job Seeker Login | Vertex Corporate</title>
 <link rel="stylesheet" href="style.css">
 </head>
@@ -65,6 +67,7 @@
             Remember me
           </label>
           <a href="#">Forgot Password?</a>
+          
         </div>
 
         <button type="submit" class="btn btn-primary full-width">
@@ -84,4 +87,5 @@
 
 </body>
 </html>
+
 
