--- a/jobseeker-login.html
+++ b/jobseeker-login.html
@@ -3,33 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <title>Job Seeker Login | Vertex Corporate</title>
 <link rel="stylesheet" href="style.css">
 </head>
-  <script>
-  const form = document.querySelector("form");
-
-  form.addEventListener("submit", function(e) {
-    e.preventDefault(); // stop real form submission
-
-    // Get input values
-    const email = document.querySelector('input[type="email"]').value;
-    const password = document.querySelector('input[type="password"]').value;
-
-    // Basic validation
-    if(email === "" || password === "") {
-      alert("Please enter email and password");
-      return;
-    }
-
-    // Fake login success (for demo)
-    alert("Login Successful!");
-
-    // Redirect to dashboard page
-    window.location.href = "dashboard.html";
-  });
-</script>
 
 <body>
 
@@ -49,15 +25,15 @@
     <div class="auth-card">
       <h2>Job Seeker Login</h2>
 
-      <form>
+      <form id="loginForm">
         <div class="form-group">
           <label>Email Address</label>
-          <input type="email" placeholder="Enter your email" required>
+          <input type="email" id="email" placeholder="Enter your email" required>
         </div>
 
         <div class="form-group">
           <label>Password</label>
-          <input type="password" placeholder="Enter your password" required>
+          <input type="password" id="password" placeholder="Enter your password" required>
         </div>
 
         <div class="form-options">
@@ -66,7 +42,6 @@
             Remember me
           </label>
           <a href="#">Forgot Password?</a>
-          
         </div>
 
         <button type="submit" class="btn btn-primary full-width">
@@ -84,8 +59,32 @@
 
 </section>
 
+<!-- ✅ SCRIPT MUST BE HERE -->
+<script>
+  const form = document.getElementById("loginForm");
+
+  form.addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+
+    if (email === "" || password === "") {
+      alert("Please enter email and password");
+      return;
+    }
+
+    // Realistic loading effect
+    const button = form.querySelector("button");
+    button.innerText = "Logging in...";
+    button.disabled = true;
+
+    setTimeout(() => {
+      window.location.href = "dashboard.html";
+    }, 1000);
+  });
+</script>
+
 </body>
 </html>
-
-
 
