Revise job listings and header structure
Updated job listings and layout in jobs.html.

--- a/jobs.html
+++ b/jobs.html
@@ -1,76 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Job Listings | Vertex Corporate</title>
-<link rel="stylesheet" href="style.css">
+  <title>Job Listings | Vertex Corporate</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
+<header class="navbar">
   <div class="container nav-container">
     <div class="logo">Vertex Corporate</div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="clients.html">Clients</a></li>
-        <li><a href="careers.html">Careers</a></li>
         <li><a href="jobs.html" class="active">Jobs</a></li>
+        <li><a href="jobseeker-login.html">Login</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
-<section class="jobs-hero">
-  <div class="container">
-    <h1>Explore Open Opportunities</h1>
-    <p>Find roles that match your skills and career goals.</p>
-  </div>
-</section>
-
 <section class="jobs-section">
   <div class="container">
+    <h1>Available Opportunities</h1>
 
     <div class="job-card">
       <div>
-       
-        <h3>Frontend Developer (React.js)</h3>
-<p>Job ID: VC-1023 | Bengaluru, Karnataka | Full-Time</p>
-<p>Experience: 1–3 Years | Salary: ₹5–8 LPA</p>
-        <span class="badge">Urgent Hiring</span>
-        <p class="posted">Posted 3 days ago</p>
-
-
-
+        <h3>React Developer</h3>
+        <p>Bengaluru | 2–4 Years | ₹6–10 LPA</p>
       </div>
-      <a href="#" class="btn btn-primary">Apply</a>
+      <button class="apply-btn">Apply</button>
     </div>
 
     <div class="job-card">
       <div>
-        <h3>Python Developer</h3>
-        <p>Remote | Contract</p>
+        <h3>Python Backend Engineer</h3>
+        <p>Remote | 3–5 Years | ₹8–12 LPA</p>
       </div>
-      <a href="#" class="btn btn-primary">Apply</a>
-    </div>
-
-    <div class="job-card">
-      <div>
-        <h3>HR Executive</h3>
-        <p>Mumbai | Full Time</p>
-      </div>
-      <a href="#" class="btn btn-primary">Apply</a>
+      <button class="apply-btn">Apply</button>
     </div>
 
   </div>
 </section>
 
 <footer>
-  <p>© 2025 Vertex Corporate. All Rights Reserved.</p>
+  <p>© 2026 Vertex Corporate</p>
 </footer>
 
+<script src="jobs.js"></script>
 </body>
 </html>
+
+
 
