--- a/jobseeker-login.html
+++ b/jobseeker-login.html
@@ -59,28 +59,31 @@
 
 </section>
 
-<section class="trust-section">
-  <div class="container trust-grid">
-    <div class="trust-box">
-      <h2>5,200+</h2>
-      <p>Successful Placements</p>
-    </div>
-    <div class="trust-box">
-      <h2>350+</h2>
-      <p>Hiring Partners</p>
-    </div>
-    <div class="trust-box">
-      <h2>1,200+</h2>
-      <p>Active Job Listings</p>
-    </div>
-    <div class="trust-box">
-      <h2>98%</h2>
-      <p>Client Satisfaction</p>
-    </div>
-  </div>
-</section>
+<script>
+  const form = document.getElementById("loginForm");
+
+  form.addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value.trim();
+
+    if (email === "" || password === "") {
+      alert("Please enter email and password");
+      return;
+    }
+
+    // Save login session
+    localStorage.setItem("isLoggedIn", "true");
+    localStorage.setItem("userEmail", email);
+
+    window.location.href = "dashboard.html";
+  });
+</script>
+
 
 </body>
 </html>
+
 
 
